--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "input-otp": "^1.4.2",
     "lucide-react": "^0.475.0",
     "next": "15.1.7",
+    "next-auth": "^5.0.0-beta.25",
     "next-pwa": "^5.6.0",
     "react": "^19.0.0",
     "react-day-picker": "8.10.1",
