--- a/package.json
+++ b/package.json
@@ -44,6 +44,8 @@
     "react-hook-form": "^7.54.2",
     "recharts": "^2.15.1",
     "sonner": "^2.0.1",
+    "sweetalert": "^2.1.2",
+    "sweetalert2": "^11.17.2",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^1.1.2",
