--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@radix-ui/react-toggle-group": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.1.8",
     "@tanstack/react-query": "^5.66.9",
+    "@types/lodash": "^4.17.16",
     "@types/web-push": "^3.6.4",
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
@@ -33,6 +34,7 @@
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
     "input-otp": "^1.4.2",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.475.0",
     "next": "15.1.7",
     "next-auth": "^5.0.0-beta.25",
