--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@radix-ui/react-toggle": "^1.1.2",
     "@radix-ui/react-toggle-group": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.1.8",
+    "@smakss/react-scroll-direction": "^4.2.0",
     "@tanstack/react-query": "^5.66.9",
     "@types/lodash": "^4.17.16",
     "@types/web-push": "^3.6.4",
