--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "next-auth": "^5.0.0-beta.25",
     "next-pwa": "^5.6.0",
     "next-themes": "^0.4.4",
+    "openai": "^4.86.2",
     "react": "^19.0.0",
     "react-day-picker": "8.10.1",
     "react-dom": "^19.0.0",
