--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@hello-pangea/dnd": "^18.0.1",
     "@heroicons/react": "^2.2.0",
     "@hookform/resolvers": "^4.1.0",
+    "@plaiceholder/next": "^3.0.0",
     "@radix-ui/react-avatar": "^1.1.3",
     "@radix-ui/react-checkbox": "^1.1.4",
     "@radix-ui/react-dialog": "^1.1.6",
@@ -44,11 +45,13 @@
     "next-pwa": "^5.6.0",
     "next-themes": "^0.4.4",
     "openai": "^4.86.2",
+    "plaiceholder": "^3.0.0",
     "react": "^19.0.0",
     "react-day-picker": "8.10.1",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "recharts": "^2.15.1",
+    "sharp": "^0.33.5",
     "sonner": "^2.0.1",
     "sweetalert": "^2.1.2",
     "sweetalert2": "^11.17.2",
