--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,7 +28,8 @@
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts",
-    "prettier.config.mjs"
+    "prettier.config.mjs",
+    "next.config.mjs"
   ],
   "exclude": ["node_modules"]
 }
