--- a/package.json
+++ b/package.json
@@ -81,5 +81,6 @@
     "prettier-plugin-tailwindcss": "^0.6.11",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
-  }
+  },
+  "packageManager": "yarn@4.9.1"
 }
